[gd_scene load_steps=4 format=2]

[ext_resource path="res://levels/world/world_tiles.gd" type="Script" id=1]
[ext_resource path="res://levels/world/pipe/PipeTileMap.tscn" type="PackedScene" id=4]
[ext_resource path="res://levels/world/ground/GroundTileMap.tscn" type="PackedScene" id=5]

[node name="WorldTiles" type="Node2D"]
script = ExtResource( 1 )

[node name="GroundTileMap" parent="." instance=ExtResource( 5 )]
tile_data = PackedInt32Array( 524280, 0, 0, 524281, 1, 0, 524282, 1, 0, 524283, 2, 0, 524284, 1, 0, 524285, 2, 0, 524286, 1, 0, 524287, 0, 0, 458752, 1, 0, 458753, 0, 0, 458754, 1, 0, 458755, 1, 0, 458756, 2, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 2, 0, 458761, 0, 0, 458762, 1, 0, 589816, 3, 0, 589817, 3, 0, 589818, 3, 0, 589819, 3, 0, 589820, 3, 0, 589821, 3, 0, 589822, 3, 0, 589823, 3, 0, 524288, 3, 0, 524289, 3, 0, 524290, 3, 0, 524291, 3, 0, 524292, 3, 0, 524293, 3, 0, 524294, 3, 0, 524295, 3, 0, 524296, 3, 0, 524297, 3, 0, 524298, 3, 0 )

[node name="PipeTileMap" parent="." instance=ExtResource( 4 )]
